app/css/game.css
/* ... */
.btnB:hover {
    background: #3cb0fd;
    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
    text-decoration: none;
}

.btnO {
    background: #d98934;
    background-image: -webkit-linear-gradient(top, #d98934, #c96800);
    background-image: -moz-linear-gradient(top, #d98934, #c96800);
    background-image: -ms-linear-gradient(top, #d98934, #c96800);
    background-image: -o-linear-gradient(top, #d98934, #c96800);
    background-image: linear-gradient(to bottom, #d98934, #c96800);
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    font-family: Arial;
    color: #ffffff;
    font-size: 15px;
    padding: 10px 20px 10px 20px;
    text-decoration: none;
    float: right;
}

.btnO:hover {
    background: #c7752e;
    background-image: -webkit-linear-gradient(top, #c7752e, #ab440c);
    background-image: -moz-linear-gradient(top, #c7752e, #ab440c);
    background-image: -ms-linear-gradient(top, #c7752e, #ab440c);
    background-image: -o-linear-gradient(top, #c7752e, #ab440c);
    background-image: linear-gradient(to bottom, #c7752e, #ab440c);
    text-decoration: none;
}

#window {
    width: 800px;
    max-height: 1000px;
    position: fixed;
    background-color: #FFFFFF;
    top: -864px;
    left: 50%;
    right: 50%;
    margin-left: -410px;
    z-index: 4;
    padding: 20px 30px 30px 30px;
    display: none;
}

#window:before, #window:after {
    content: " ";
    clear: both;
    display: block;
}

#register {
    width: 800px;
    background: #ffffff;
    position: fixed;
    top: -864px;
    left: 50%;
    margin-left: -250px;
    z-index: 99;
    display: none;
}

.close {
    position: absolute;
    right: 10px;
    top: 10px;
}

.close-icon {
    width: 20px;
    height: 20px;
    /*background-image: url("../img/close.png");*/
    background-size: cover;

}

.showImage {
    float: left;
    max-width: 45%;
}

.clueImage {
    height: auto;
    max-width: 100%;
    width: 340px;
    overflow: hidden;

    vertical-align: top;
}

.introduction {
    float: right;
    width: auto;
    max-width: 45%;
    max-height: 500px;
    margin-left: 40px;
    overflow-y: scroll;
}

.clueText{
    word-wrap: break-word;
    font-size: 16px;
}

#mp3_1{
    position:absolute;
    top:95%;
    left: 1%;
    z-index: 3;
}

#mp3_T{
    position:absolute;
    top:95%;
    left: 1%;
    z-index: 3;
}

#countdown{
    position:absolute;
    z-index: 3;
}

#clues{
    position: absolute;
    background-image: url("../img/tools/clues.png");
    background-size: cover;
    right: 10%;
    z-index: 4;
}



.question{
    display: none;
    position: absolute;
    left:26%;
    z-index: 2;
}

.questionimg{
    height: 200px;
    width: 847px;
}

#checkinput{
    display: none;
    top:700px;
    left: 50%;
    right: 50%;
    margin-left: -314px;
    position: relative;
    z-index: 10;
    width: 624px;
    height: auto;
    font-family: Bookman;
    font-weight: 500;
    font-size: 24px;
    color: #ebd9a9;
}

.custom{
    cursor:url(../img/tools/magnifying_glass.png), auto;
}

input.game-input {
    
    background-image: url("../img/tools/input.png");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    background-color: rgba(0,0,0,0);
    width: 624px;
    height: 85px;
    padding: 15px 150px;
    margin-bottom: 10px;
    border: none;
    float: left;
    text-align: center;
}

input.game-input::-webkit-input-placeholder {
    font-weight: 500;
    font-size: 24px;
    font-family: Bookman;
    color: #ebd9a9;
    text-align: center;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:-moz-placeholder {
    font-weight: 500;
    font-size: 24px;
    font-family: Bookman;
    color: #ebd9a9;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input::-moz-placeholder {
    font-weight: 500;
    font-size: 24px;
    font-family: Bookman;
    color: #ebd9a9;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:-ms-input-placeholder {
    font-weight: 500;
    font-size: 24px;
    font-family: Bookman;
    color: #ebd9a9;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:focus::-webkit-input-placeholder {
    color: transparent;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:focus:-moz-placeholder {
    color: transparent;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:focus::-moz-placeholder {
    color: transparent;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

input.game-input:focus:-ms-input-placeholder {
    color: transparent;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}
/* ... */

